# oakenscrolls-office

./: .gitignore  NOTICE  README.md  almanac_seam.py  app.py  calibration.py  demo.sh  dev.ps1  dev.sh  office_db.py  office_paths.py  pyproject.toml  safe-app-manifest.json  sandbox.sh  stupid_tests.py  web.py  willow_bridge.py
tests/: test_almanac_seam.py  test_almanac_seam_nestor.py  test_bridge.py  test_calibration.py  test_no_egress.py  test_office_db.py  test_web.py
