[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oakenscrolls-office"
version = "0.2.0"
description = "Personal calibration ledger — where certainty gets graded. Local-first, append-only, no egress."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "textual>=0.47.0",
    # Nestor's verified-match engine backs almanac_seam's fuzzy citation
    # fallback (stdlib-only; no egress). Repin to a tag/main once the Nestor
    # branch merges.
    "nestor @ git+https://github.com/rudi193-cmd/Nestor@claude/new-ledger-piece-e3vxvn",
]

[project.scripts]
oakenscrolls-office = "app:main"
